@@ -25,6 +25,7 @@
   <adapter factory=".folder.folder_sort_key" />
 
   <adapter factory=".repository.cmscontentFactory" />
+  <subscriber handler=".repository.invalidate_uncontained_content" />
 
   <!-- content object creation
 
